force-app/main/default/objects/Sob1__c/Sob1__c.object-meta.xml
<CustomObject>
    <label>Sob1</label>
    <nameField>
        <label>Sob1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sob1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>