force-app/main/default/objects/Sob1__c/fields/SF1__c.field-meta.xml
<CustomField>
    <fullName>SF1__c</fullName>
    <label>SF1</label>
    <length>6</length>
    <type>Text</type>
</CustomField>