force-app/main/default/objects/Sob1__c/fields/SF2__c.field-meta.xml
<CustomField>
    <fullName>SF2__c</fullName>
    <label>SF2</label>
    <length>7</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>