force-app/main/default/objects/Sob1__c/fields/SF3__c.field-meta.xml
<CustomField>
    <fullName>SF3__c</fullName>
    <label>SF3</label>
    <length>9</length>
    <type>Text</type>
</CustomField>