force-app/main/default/objects/Sob1__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>SF1__c</columns>
    <columns>SF2__c</columns>
    <columns>SF3__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>